test/data/fail/declarations/function.js
function f(){
   "use strict";
   if(true) function f(){}
   else function f(){)
}
